--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ p{
 	padding: 7px 10px;
 }
 .top__title{
-	/*font-size: 1rem;*/
 	color: white;
 	font-weight: 400;
 	font-size: calc(12px + 5 *(100vw / 1170));
@@ -122,6 +121,7 @@ header .wrapper{
 	transition: 0.3s ease;
 	position: relative;
 	padding-left: 1rem;
+	font-size: calc(14px + 4 * ((100vw - 320px) / (1280 - 320)));
 }
 .header__tel:before{
 	content: "\f879";
@@ -129,16 +129,15 @@ header .wrapper{
 	position: absolute;
 	left: 0;
 	top: 3px;
-	font-size: 0.8rem;
 	color: black;
 	font-weight: 900; 
 	transition: 0.3s ease;
 }
 .header__time{
-	font-size: 0.8rem;
 	color: #111;
 	font-weight: 400;
 	transition: 0.3s ease;
+	font-size: calc(12px + 4 * ((100vw - 320px) / (1280 - 320)));
 }
 .header__phone:hover span{
 	color: #f43c33;
@@ -222,6 +221,7 @@ header .wrapper{
 	display: flex;
 	padding: 12px 15px;
 	background: white;
+	font-size: calc(24px + 8 * ((100vw - 320px) / (1280 - 320)));
 	border-radius: 5px;
 	margin: 0;
 }
@@ -231,6 +231,7 @@ header .wrapper{
 	padding: 12px 15px;
 	display: flex;
 	margin: 1rem 0;
+	font-size: calc(12px + 4 * ((100vw - 320px) / (1280 - 320)));
 }
 .slider__button{
 	display: flex;
@@ -238,7 +239,6 @@ header .wrapper{
 	align-items: center;
 	padding: 1rem 1.5rem;
 	border-radius: 5px;
-	font-size: 0.9rem;
 	color: white;
 	font-weight: 500;
 	letter-spacing: 1.5px;
@@ -248,6 +248,7 @@ header .wrapper{
 	z-index: 1;
 	transition: 0.3s ease;
 	overflow: hidden;
+	font-size: calc(12px + 4 * ((100vw - 320px) / (1280 - 320)));
 }
 .slider__button:before{
 	content: "";
@@ -280,6 +281,7 @@ header .wrapper{
 	background: white;
 	padding: 12px 15px;
 	display: flex;
+	font-size: calc(12px + 4 * ((100vw - 320px) / (1280 - 320)));
 }
 
 
@@ -728,7 +730,7 @@ footer .wrapper{
 }
 .cart__title{
 	position: relative;
-	font-size: 1.5rem;
+	font-size: calc(15px + 8 * ((100vw - 320px) / (1280 - 320)));
 	color: #3960ff;
 	font-weight: 300;
 	margin-top: 0;
@@ -820,7 +822,8 @@ footer .wrapper{
 .contact__modal{
 	width: 500px;
 	padding: 3rem 3.5rem;
-	background: #56ab2f;
+	/*background: #56ab2f;*/
+	background: #3960ff;
 	border-radius: 10px;
 	position: relative;
 	transform: translateY(-200%);
@@ -1002,11 +1005,13 @@ footer .wrapper{
 	font-size: 1rem;
 }
 .select__item:hover{
-	background: #56ab2f;
+	/*background: #56ab2f;*/
+	background: #3960ff;
 	color: white;
 }
 .select__item.active{
-	background: #56ab2f;
+	/*background: #56ab2f;*/
+	background: #3960ff;
 	color: white;
 }
 .select-form{
@@ -1061,11 +1066,13 @@ footer .wrapper{
 	font-size: 1rem;
 }
 .price__item:hover{
-	background: #56ab2f;
+	/*background: #56ab2f;*/
+	background: #3960ff;
 	color: white;
 }
 .price__item.active{
-	background: #56ab2f;
+	/*background: #56ab2f;*/
+	background: #3960ff;
 	color: white;
 }
 
@@ -1119,6 +1126,9 @@ footer .wrapper{
 	.sofa__content{
 		grid-template-columns: 1fr 1fr 1fr;
 	}
+	.cart__wrap{
+		width: 65%;
+	}
 
 }
 @media screen and (max-width: 760px) {
@@ -1152,6 +1162,9 @@ footer .wrapper{
 		right: 1em;
 		top: 1em;
 	}
+	.slider__item{
+		padding: 0 15px;
+	}
 	.burger__holder{
 		position: absolute;
 		left: 15px;
@@ -1165,14 +1178,23 @@ footer .wrapper{
 	.footer__item{
 		margin: 5px 0;
 	}
+	.cart__wrap{
+		width: 70%;
+	}
 }
 @media screen and (max-width: 700px) {
 	.sofa__content{
 		grid-template-columns: 1fr 1fr;
 	}
+	.cart__wrap{
+		width: 75%;
+	}
 }
 @media screen and (max-width: 550px) {
 	.sofa__content{
 		grid-template-columns: 1fr;
+	}
+	.cart__wrap{
+		width: 100%;
 	}
 }
